--- a/content/post/2017-12-14-r-graphs.Rmd
+++ b/content/post/2017-12-14-r-graphs.Rmd
@@ -1,9 +1,11 @@
-+++
-title = "R-Graphs"
-weight = 18
-draft = false
-+++
-
+---
+title: R-Graphs
+author: Sam P
+date: '2017-12-14'
+slug: r-graphs
+categories: []
+tags: []
+---
 
 {{< figure class="image main" src="/images/pic02.jpg" >}}
 
@@ -68,8 +70,8 @@ Now format the graph with data drawn from result. Bins are the number of individ
 
 ```{r}
 ggplot()+
-   geom_histogram(data=result,aes(x=weight),color="blue",fill="white",bins=50)
-   +ggtitle("Body-weight distribution for Baseball players")
+   geom_histogram(data=result,aes(x=weight),color="blue",fill="white",bins=50) +
+   ggtitle("Body weight")
 ```
 
 
